[ADD] Dockerfile 생성 및 관련 라이브러리 설치

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ name = "pypi"
 django = "*"
 requests = "*"
 pillow = "*"
+uwsgi = "*"
+"psycopg2" = "*"
+django-storages-azure = "==1.6.8"
 
 [dev-packages]
 
